Actions
Bug #13803
openrdist: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc compilers:
server.c: In function 'recvf': server.c:771: error: 'olderrno' may be used uninitialized in this function [-Wuninitialized] *** Error code 1 dmake: Fatal error: Command failed for target `server.o' lookup.c: In function 'define': lookup.c:43: error: 'value' may be used uninitialized in this function [-Wuninitialized] *** Error code 1 dmake: Fatal error: Command failed for target `lookup.o' main.c: In function 'docmdargs': main.c:467:2: error: 'files' may be used uninitialized in this function [-Werror=maybe-uninitialized] insert(NULL, files, hosts, cmds); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `main.o' Current working directory /code/illumos-gate/usr/src/cmd/cmd-inet/usr.bin/rdist
Testing done: build/install/boot
Updated by Toomas Soome about 2 years ago
- Subject changed from rdist: 'files' may be used uninitialized to rdist: variable may be used uninitialized
- Description updated (diff)
Actions