13803 rdist: variables may be used uninitialized

server.c: In function 'recvf':
server.c:771: error: 'olderrno' may be used uninitialized in this function [-Wuninitialized]
*** Error code 1
dmake: Fatal error: Command failed for target `server.o'

lookup.c: In function 'define':
lookup.c:43: error: 'value' may be used uninitialized in this function [-Wuninitialized]
*** Error code 1
dmake: Fatal error: Command failed for target `lookup.o'

main.c: In function 'docmdargs':
main.c:467:2: error: 'files' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  insert(NULL, files, hosts, cmds);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
*** Error code 1
dmake: Fatal error: Command failed for target `main.o'
Current working directory /code/illumos-gate/usr/src/cmd/cmd-inet/usr.bin/rdist

Change-Id: I7578551c6a5369f21cd446230650372ed6b70588