usr/src/cmd/cmd-inet/usr.bin/rdist/expand.c
@@ -14,7 +14,6 @@
  * Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
  */
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
 
 #include "defs.h"
 #include <string.h>
@@ -64,12 +63,10 @@ static int execbrc(char *p, char *s);
  * Major portions of this were snarfed from csh/sh.glob.c.
  */
 struct namelist *
-expand(list, wh)
-	struct namelist *list;
-	int wh;
+expand(struct namelist *list, int wh)
 {
-	register struct namelist *nl, *prev;
-	register int n;
+	struct namelist *nl, *prev;
+	int n;
 	char pathbuf[LINESIZE];
 	char *argvbuf[GAVSIZ];
 
@@ -79,7 +76,7 @@ expand(list, wh)
 	}
 
 	if (wh == 0) {
-		register char *cp;
+		char *cp;
 
 		for (nl = list; nl != NULL; nl = nl->n_next)
 			for (cp = nl->n_name; *cp; cp++)
@@ -90,7 +87,7 @@ expand(list, wh)
 	which = wh;
 	path = tpathp = pathp = pathbuf;
 	*pathp = '\0';
-	lastpathp = &path[sizeof pathbuf - 2];
+	lastpathp = &path[sizeof (pathbuf) - 2];
 	tilde = "";
 	eargc = 0;
 	eargv = sortbase = argvbuf;
@@ -123,11 +120,10 @@ expand(list, wh)
 }
 
 static void
-expstr(s)
-	char *s;
+expstr(char *s)
 {
-	register char *cp, *cp1;
-	register struct namelist *tp;
+	char *cp, *cp1;
+	struct namelist *tp;
 	char *tail;
 	char buf[LINESIZE];
 	int savec, oeargc;
@@ -158,7 +154,7 @@ expstr(s)
 			savec = *tail;
 			*tail = '\0';
 		}
-		tp = lookup(cp, NULL, 0);
+		tp = lookup(cp, 0, NULL);
 		if (savec != '\0')
 			*tail = savec;
 		if (tp != NULL) {
@@ -173,7 +169,8 @@ expstr(s)
 		expstr(buf);
 		return;
 	}
-	if ((which & ~E_VARS) == 0 || !strcmp(s, "{") || !strcmp(s, "{}")) {
+	if ((which & ~E_VARS) == 0 || strcmp(s, "{") == 0 ||
+	    strcmp(s, "{}") == 0) {
 		Cat(s, "");
 		sort();
 		return;
@@ -248,11 +245,10 @@ argcmp(const void *arg1, const void *arg2)
  * expand into a list, after searching directory
  */
 static void
-expsh(s)
-	char *s;
+expsh(char *s)
 {
-	register char *cp;
-	register char *spathp, *oldcp;
+	char *cp;
+	char *spathp, *oldcp;
 	struct stat stb;
 
 	spathp = pathp;
@@ -286,11 +282,10 @@ endit:
 }
 
 static void
-matchdir(pattern)
-	char *pattern;
+matchdir(char *pattern)
 {
 	struct stat stb;
-	register struct dirent *dp;
+	struct dirent *dp;
 	DIR *dirp;
 
 	dirp = opendir(path);
@@ -339,11 +334,10 @@ patherr2:
 }
 
 static int
-execbrc(p, s)
-	char *p, *s;
+execbrc(char *p, char *s)
 {
 	char restbuf[LINESIZE + 2];
-	register char *pe, *pm, *pl;
+	char *pe, *pm, *pl;
 	int brclev = 0;
 	char *lm, savec, *spathp;
 
@@ -428,11 +422,10 @@ doit:
 }
 
 int
-match(s, p)
-	char *s, *p;
+match(char *s, char *p)
 {
-	register int c;
-	register char *sentp;
+	int c;
+	char *sentp;
 	char sexpany = expany;
 
 	if (*s == '.' && *p != '.')
@@ -446,10 +439,9 @@ match(s, p)
 }
 
 int
-amatch(s, p)
-	register char *s, *p;
+amatch(char *s, char *p)
 {
-	register int scc;
+	int scc;
 	int ok, lc;
 	char *spathp;
 	struct stat stb;
@@ -535,10 +527,9 @@ slash:
 }
 
 int
-smatch(s, p)
-	register char *s, *p;
+smatch(char *s, char *p)
 {
-	register int scc;
+	int scc;
 	int ok, lc;
 	int c, cc;
 
@@ -594,11 +585,10 @@ smatch(s, p)
 }
 
 static void
-Cat(s1, s2)
-	register char *s1, *s2;
+Cat(char *s1, char *s2)
 {
 	int len = strlen(s1) + strlen(s2) + 1;
-	register char *s;
+	char *s;
 
 	nleft -= len;
 	if (nleft <= 0 || ++eargc >= GAVSIZ)
@@ -632,12 +622,9 @@ addpath(char c)
  * part corresponding to `file'.
  */
 char *
-exptilde(buf, len, file)
-	char buf[];
-	unsigned int len;
-	register char *file;
+exptilde(char buf[], unsigned int len, char *file)
 {
-	register char *s1, *s2, *s3;
+	char *s1, *s2, *s3;
 	extern char homedir[];
 
 	if (*file != '~') {
